fix popover z-index

--- a/src/components/popover/popover.css
+++ b/src/components/popover/popover.css
@@ -1,3 +1,7 @@
+.wui-popover {
+  @apply z-100;
+}
+
 .wui-popover-arrow {
   @apply absolute box-border;
   @apply w-4 h-4 bg-white;
